tests/bad/alias-dup.q
type t = qubit<P>
type t = qubit<M>

fun main () : unit = ()
